--- a/hotels.html
+++ b/hotels.html
@@ -99,7 +99,7 @@
             <div class="hotels">
               <h2>Amara resort & spa</h2>
               <span class="hotel-preis">Гостиница от 3500 р.</span>
-              <img src="img/amara-resort.png" width="135" height="90" alt="Amara resort & spa">              
+              <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara resort & spa">              
               <br> 
 
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">            
@@ -116,7 +116,7 @@
             <div class="hotels">
               <h2>Desert Quail inn</h2>
               <span class="hotel-preis">Мотель от 2000 р.</span>
-              <img src="img/desert-quail.png" width="135" height="90" alt="Desert Quail inn">              
+              <img src="img/desert-quail.jpg" width="135" height="90" alt="Desert Quail inn">              
               <br> 
 
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">             
@@ -133,7 +133,7 @@
             <div class="hotels">
               <h2>Villas at poco diablo</h2>
               <span class="hotel-preis">Аппартамены от 4000 р.</span>
-              <img src="img/poco-diablo.png" width="135" height="90" alt="Villas at poco diablo">              
+              <img src="img/poco-diablo.jpg" width="135" height="90" alt="Villas at poco diablo">              
               <br>
 
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">              
