--- a/hotels.html
+++ b/hotels.html
@@ -9,14 +9,14 @@
    <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="img/logo.svg" width="115" height="55" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="info.html"><img src="img/info.png"></a></li>
-          <li><a href="photos_and_videos.html"><img src="img/photos & videos.png"></a></li>
-          <li><a href="state-map"><img src="img/map.png"></a></li>
-          <li><a href="hotels.html"><img src="img/hotels.png"></a></li>          
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="photos_and_videos.html">Фото и видео</a></li>
+          <li><a href="index.html#map">Карта штата</a></li>
+          <li><a class="current" href="hotels.html">Гостиницы</a></li>          
         </ul>
       </nav>
     </header>
