--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
    <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo">
+        <a class="main-header-logo" href="index.html">
           <img src="img/logo.svg" width="115" height="55" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
-          <li><a href="info.html"><img src="img/info.png"></a></li>
-          <li><a href="photos_and_videos.html"><img src="img/photos & videos.png"></a></li>
-          <li><a href="state-map"><img src="img/map.png"></a></li>
-          <li><a href="hotels.html"><img src="img/hotels.png"></a></li>          
+          <li><a href="info.html">Информация</a></li>
+          <li><a href="photos_and_videos.html">Фото и видео</a></li>
+          <li><a href="index.html#map">Карта штата</a></li>
+          <li><a href="hotels.html">Гостиницы</a></li>           
         </ul>
       </nav>
     </header>
     <main>
        <section class="intro">
           <!--<h2 class="visually-hidden">Седона</h2>-->
-          <img src="img/intro.png" width="1200" height="780" alt="Welcome">          
+          <img src="img/intro.png" width="1200" height="773" alt="Welcome">          
        </section>
        <section class="features">
             <div class="features-head">               
