--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                </div>
 
                <div clas="features-items-img features-blue">
-                   <img src="img/true-city.png" width="800" height="256" alt="Настоящий городок">    	
+                   <img src="img/true-city.jpg" width="800" height="256" alt="Настоящий городок">    	
                </div>
            </div>
 
@@ -65,7 +65,7 @@
 
            <div class="features-items">
                <div class="features-items-img features-blue">            
-                   <img src="img/devils-bridge.png" width="800" height="256" alt="Мост дьявола">                
+                   <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">                
                </div>
            
                <div clas="item-title features-blue">                
