--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
       </nav>
     </header>
     <main>
-       <section class="intro">
+       <div class="intro">
           <!--<h2 class="visually-hidden">Седона</h2>-->
           <img src="img/intro.png" width="1200" height="773" alt="Welcome">          
-       </section>
+       </div>
        <section class="features">
             <div class="features-head">               
                <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
@@ -92,7 +92,7 @@
            </div>
        </section>
 
-       <section class="hotel-search">
+       <div class="hotel-search">
            <h2>Заинтересовались?</h2>
            <span class="secondary-text">Укажите предполагемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</span>
 
@@ -111,27 +111,29 @@
                       <input type="submit" value="Найти">                   
               </fieldset>
            </form>
-       </section>
-
-       <section class="map">
-            <iframe src="https://www.google.com/maps/place/34%C2%B051'36.0%22N+111%C2%B047'21.0%22W/@34.86,-111.78917,12z/data=!4m5!3m4!1s0x0:0x0!8m2!3d34.86!4d-111.78917?hl=ru" name="map" width="1200" height="593"></iframe>    	
-       </section>
-    </main>
-
+       </div>
+      </main>
+       
     <footer class="main-footer">
-       <div class="footer-tag">#visitsedona</div>
-         <div class="footer-social">        
-           <ul>
-             <li><a class="social-button" href="#"><img src="img/twitter.svg"></a></li>
-             <li><a class="social-button" href="#"><img src="img/fb.svg"></a></li>
-             <li><a class="social-button" href="#"><img src="img/youtube.svg"></a></li>
-           </ul>
-         </div>
-         <div class="footer-copyright">
-             <span class="secondary-text">Website by</span>        
-             <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
-         </div>
-    </footer>
-   </div>
+      <div class="map" id="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d838162.8369633064!2d-111.79513845!3d34.854378399999995!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2sSedona%2C+AZ%2C+USA!5e0!3m2!1sen!2sru!4v1435000602855" width="1200" height="593" allowfullscreen></iframe>
+      </div>
+    <div class="footer-items">
+      <div class="footer-tag">
+        <a href="#">#visitsedona</a>
+      </div>
+      <div class="footer-social">        
+          <ul>
+            <li><a class="social-button" href="#"><img src="img/twitter.svg"></a></li>
+            <li><a class="social-button" href="#"><img src="img/fb.svg"></a></li>
+            <li><a class="social-button" href="#"><img src="img/youtube.svg"></a></li>
+          </ul>
+      </div>
+      <div class="footer-copyright">
+          <span class="secondary-text">website by</span>        
+          <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
+      </div>
+     </div>
+    </footer>  
   </body>
 </html>  
