--- a/hotels.html
+++ b/hotels.html
@@ -149,20 +149,23 @@
         </section>        
     </main>
 
-    <footer class="main-footer">
-       <div class="footer-tag">#visitsedona</div>
-         <div class="footer-social">        
-           <ul>
-             <li><a class="social-button" href="#"><img src="img/twitter.svg"></a></li>
-             <li><a class="social-button" href="#"><img src="img/fb.svg"></a></li>
-             <li><a class="social-button" href="#"><img src="img/youtube.svg"></a></li>
-           </ul>
-         </div>
-         <div class="footer-copyright">
-             <span class="secondary-text">Website by</span>        
-             <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
-         </div>
-    </footer>
-   </div>
+    <footer class="main-footer">      
+     <div class="footer-items">
+      <div class="footer-tag">
+        <a href="#">#visitsedona</a>
+      </div>
+      <div class="footer-social">        
+          <ul>
+            <li><a class="social-button" href="#"><img src="img/twitter.svg"></a></li>
+            <li><a class="social-button" href="#"><img src="img/fb.svg"></a></li>
+            <li><a class="social-button" href="#"><img src="img/youtube.svg"></a></li>
+          </ul>
+      </div>
+      <div class="footer-copyright">
+          <span class="secondary-text">website by</span>        
+          <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
+      </div>
+     </div>
+    </footer>  
   </body>
 </html>  
