--- a/hotels.html
+++ b/hotels.html
@@ -9,7 +9,7 @@
    <div class="container">
     <header class="main-header">
       <nav class="main-navigation">
-        <a class="main-header-logo" href="index.html">
+        <a class="main-header-logo">
           <img src="img/logo.svg" width="115" height="55" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
@@ -99,7 +99,7 @@
             <div class="hotels">
               <h2>Amara resort & spa</h2>
               <span class="hotel-preis">Гостиница от 3500 р.</span>
-              <img src="img/amara-resort.jpg" width="135" height="90" alt="Amara resort & spa">              
+              <a href=""><img src="img/amara-resort.jpg" width="135" height="90" alt="Amara resort & spa"></a>              
               <br> 
 
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">            
@@ -116,9 +116,8 @@
             <div class="hotels">
               <h2>Desert Quail inn</h2>
               <span class="hotel-preis">Мотель от 2000 р.</span>
-              <img src="img/desert-quail.jpg" width="135" height="90" alt="Desert Quail inn">              
-              <br> 
-
+              <a href="#"><img src="img/desert-quail.jpg" width="135" height="90" alt="Desert Quail inn"></a>              
+              
             <form class="filter" method="get" action="https://echo.htmlacademy.ru">             
               <input type="submit" name="details-btn" value="Подробнее">
               <input type="submit" name="book-btn" value="Забронировать">
@@ -133,10 +132,9 @@
             <div class="hotels">
               <h2>Villas at poco diablo</h2>
               <span class="hotel-preis">Аппартамены от 4000 р.</span>
-              <img src="img/poco-diablo.jpg" width="135" height="90" alt="Villas at poco diablo">              
-              <br>
-
-            <form class="filter" method="get" action="https://echo.htmlacademy.ru">              
+              <a href="#"><img src="img/poco-diablo.jpg" width="135" height="90" alt="Villas at poco diablo"></a>             
+              
+           <form class="filter" method="get" action="https://echo.htmlacademy.ru">              
               <input type="submit" name="details-btn" value="Подробнее">
               <input type="submit" name="book-btn" value="Забронировать">
             </form>
@@ -149,8 +147,7 @@
         </section>        
     </main>
 
-    <footer class="main-footer">      
-     <div class="footer-items">
+    <footer class="main-footer">     
       <div class="footer-tag">
         <a href="#">#visitsedona</a>
       </div>
