--- a/hotels.html
+++ b/hotels.html
@@ -94,6 +94,7 @@
 
 
         <section class="results">
+          <h2 class="visually-hidden">Отели</h2>
             <div class="hotels">
               <h2>Amara resort & spa</h2>
               <span class="hotel-preis">Гостиница от 3500 р.</span>
