--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
        <div class="intro">
-          <!--<h2 class="visually-hidden">Седона</h2>-->
+          <h2 class="visually-hidden">Седона</h2>
           <img src="img/intro.png" width="1200" height="773" alt="Welcome">          
        </div>
        <section class="features">
