--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>   
     <meta charset="utf-8">    
       <title>Седона</title> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet" type='text/css'> 
+        <link href="css/normalize.css" rel="stylesheet">
         <link href="css/style.css" rel="stylesheet">     
   </head>
   <body>
@@ -10,7 +12,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-          <img src="img/logo.svg" width="115" height="55" alt="Логотип города Седона">
+          <img src="img/logo.svg" alt="Логотип города Седона">
         </a>
         <ul class="site-navigation">
           <li><a href="info.html">Информация</a></li>
@@ -21,13 +23,13 @@
       </nav>
     </header>
     <main>
-       <div class="intro">
-          <h2 class="visually-hidden">Седона</h2>
-          <img src="img/intro.png" width="1200" height="773" alt="Welcome">          
+       <div class="intro">          
+          <div class="poster"></div>       
        </div>
-       <section class="features">
-            <div class="features-head">               
-               <h1>Седона - небольшой городок в Аризоне, заслуживающий большего!</h1>
+        <section class="features">
+            <div class="features-head"> 
+           <!--<h1 class="visually-hidden">Седона</h1>-->              
+               <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
                <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
             </div>
 
