--- a/hotels.html
+++ b/hotels.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Поиск жилья в Седоне</title>
-      <link href="css/style.css" rel="stylesheet"> 
+        <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700&amp;subset=cyrillic" rel="stylesheet" type='text/css'> 
+        <link href="css/normalize.css" rel="stylesheet">
+        <link href="css/style.css" rel="stylesheet"> 
   </head>
   <body>
    <div class="container">
