--- a/index.html
+++ b/index.html
@@ -28,14 +28,14 @@
        </div>
         <section class="features">
             <div class="features-head"> 
-           <!--<h1 class="visually-hidden">Седона</h1>-->              
+              <h1 class="visually-hidden">Седона</h1>           
                <h2>Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-               <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон</p>
+               <p>Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
             </div>
 
-            <div class="features-items">
+            <div class="features-items left">
                <div class="item-title features-blue">
-                   <h2>Настоящий городок</h2>
+                   <h2 class="feature-title">Настоящий городок</h2>
                    <p>&#8212 №1 &#8212</p>
                    <p>Седона - не аттракцион для туристов,
                    там течет своя жизнь</p>           
@@ -46,52 +46,52 @@
                </div>
            </div>
 
-           <div class="features-items">
-               <div class="item-title features-white">
+           <div class="advantages-items">
+               <div class="advantage-title features-white">                 
                    <img src="img/icon-house.svg">
                    <h2>Жилье</h2>
-                   <p>Рекомендуем пожить в настоящем мотеле,все как в кино!</p>
+                   <p>Рекомендуем пожить в настоящем мотеле,все как в кино!</p>                
                </div>
 
-               <div class="item-title features-white">
+               <div class="advantage-title features-white">
                    <img src="img/icon-burger.svg">
                    <h2>Еда</h2>
                    <p>Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
                </div>
 
-               <div class="item-title features-white">
+               <div class="advantage-title features-white">
                    <img src="img/icon-souvenir.svg">
                    <h2>Сувениры</h2>
                    <p>Не только китайского, но и местного производства!</p>
                </div>
            </div>
 
-           <div class="features-items">
+           <div class="features-items right">
                <div class="features-items-img features-blue">            
                    <img src="img/devils-bridge.jpg" width="800" height="256" alt="Мост дьявола">                
                </div>
            
                <div clas="item-title features-blue">                
-                   <h2>Там есть мост дьявола</h2>
+                   <h2 class="feature-title">Там есть мост дьявола</h2>
                    <p>&#8212 №2 &#8212</p>
                    <p>Да, но по нему можно пройти!Если конечно вы осмелитесь</p>           
                </div>
            </div>
 
-           <div class="features-items">
-                <div class="item-title features-gray">
+           <div class="advantages-items">
+                <div class="advantage-title features-gray">
                    <h2>Небольшая площадь</h2>
                    <p>&#8212 №3 &#8212</p>
                    <p>Все достопримечательности находятся очень близко</p>
                 </div>
 
-                <div class="item-title features-gray">
+                <div class="advantage-title features-gray">
                    <h2>Красивая дорога</h2>
                    <p>&#8212 №4 &#8212</p>
                    <p>Ехать в Седону из Лас-Вегаса совсем не скучно</p>
                 </div>
 
-                <div class="item-title features-gray">
+                <div class="advantage-title features-gray">
                    <h2>Мало туристов</h2>
                    <p>&#8212 №5 &#8212</p>
                    <p>Большинство едет в Гранд Каньон и толпится там</p>
@@ -119,7 +119,6 @@
               </fieldset>
 
               <fieldset class="choose-features">
-
                  <fieldset class="growns">
                     <label class="form-label" for="counter-adult">Взрослые:</label>
                     <button class="icon-minus" type="button" tabindex="-1"></button>
@@ -159,7 +158,7 @@
       </div>
       <div class="footer-copyright">
           <span class="secondary-text">website by</span>        
-          <a class="button" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
+          <a class="button-htmlacademy" href="https://htmlacademy.ru"><img src="img/logo-htmlacademy.svg"></a>
       </div>
      </div>
     </footer>  
